--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ site.title }}</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ "/css/style.css" | relative_url }}">
 
 </head>
 <body>
