--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,10 @@
 layout: "wrapper"
 ---
 
-<h2>Posts</h2>
 {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <article>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a> <span class="date">{{ post.date | date: "%Y-%m-%d" }}</span></h2>
+        <p>{{ post.excerpt }}</p>
+    </article>
 {% endfor %}
 
