--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,9 @@ html {
     line-height: 1.5;
 }
 body {
-    font-family: "Spoqa Han Sans", "Apple SD Gothic Neo", "Nanum Gothic", "나눔고딕", "Malgun Gothic";
+    // font-family: "Spoqa Han Sans", "Apple SD Gothic Neo", "Nanum Gothic", "나눔고딕", "Malgun Gothic";
+    // font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: Nunito, sans-serif;
     margin: 0;
     padding: 0;
     position: relative;
@@ -20,7 +22,8 @@ a {
     color: #000;
     text-decoration: none;
     &:hover {
-        text-decoration: underline;
+        text-decoration: none;
+        color: #ee3dc1;
     }
 }
 
@@ -29,15 +32,24 @@ a {
         position: relative;
         overflow: hidden;
         height: 400px;
+        max-height: 400px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         background-color: #F9FAFB;
+        @media screen and (max-width: 1024px) and (min-width: 640px) {
+            height: 200px;
+        }
+        @media screen and (max-width: 639px) and (min-width: 320px) {
+            height: 100px;
+        }
     }
     header {
         position: relative;
+        overflow: hidden;
         max-width: 700px;
         margin: 0 auto;
+        padding-bottom: 20px;
         background-color: #fff;
         text-align: center;
     }
@@ -45,6 +57,21 @@ a {
         position: relative;
         max-width: 700px;
         margin: 0 auto;
+        padding: 0 16px;
+        article {
+            border-bottom: 1px solid #f2f2f0;
+            h2 {
+                font-size: 28px;
+                margin-bottom: 10px;
+            }
+            .date {
+                color: #ccc;
+                font-size: 16px;
+            }
+            p {
+                color: #9c9c9c;
+            }
+        }
     }
     footer {
         position: relative;
