Style modified & gitignore file updated

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,10 @@ layout: "wrapper"
 
 {{ content }}
 
-<hr>
+<!-- <hr>
 {% for post in site.posts %}
     <li>
-        <a style="{% if page.url == post.url %}color:red;{% endif %}" href="{{ post.url }}">{{ post.title }}</a>
+        <a style="{% if page.url == post.url %}color:#ee3dc1;{% endif %}" href="{{ post.url }}">{{ post.title }}</a>
         <span>{{ post.date }}</span>
     </li>
-{% endfor %}
+{% endfor %} -->
