--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "/css/style.css" | relative_url }}">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 
 </head>
 <body>
     <div class="wrapper">
         {% include imagecover.html %}
         {% include header.html %}
-
         <div class="content">
             {{ content }}
         </div>
-
-
         {% include footer.html %}
     </div>
 
