--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,18 @@
     <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
     <p>{{ site.description }}</p>
     <nav>
-        <a href="/">Home</a>
-        <a href="/about/index.html">About</a>
+        <a href="/">
+            <i class="fa fa-home"></i>
+            Home
+        </a>
+        <a href="/about/index.html">
+            <i class="fa fa-user"></i>
+            About
+        </a>
+        <a href="#">
+            <i class="fa fa-folder-open"></i>
+            Category
+        </a>
     </nav>
 </header>
 
