--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,10 @@ layout: "wrapper"
 
 {% for post in site.posts %}
     <article>
-        <h2><a href="{{ post.url }}">{{ post.title }}</a> <span class="date">{{ post.date | date: "%Y-%m-%d" }}</span></h2>
+        <h2>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            <span class="date">{{ post.date | date: "%B %d, %Y" }}</span>
+        </h2>
         <p>{{ post.excerpt }}</p>
     </article>
 {% endfor %}
