--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,8 @@ html {
 body {
     // font-family: "Spoqa Han Sans", "Apple SD Gothic Neo", "Nanum Gothic", "나눔고딕", "Malgun Gothic";
     // font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-family: Nunito, sans-serif;
+    // font-family: Nunito, sans-serif;
+    font-family: "Lato", "PingFang SC", "Microsoft YaHei", sans-serif;
     margin: 0;
     padding: 0;
     position: relative;
@@ -52,6 +53,24 @@ a {
         padding-bottom: 20px;
         background-color: #fff;
         text-align: center;
+        border-bottom: 1px solid #f5f5f5;
+        h1 {
+            margin: 0;
+            padding: 20px 0 0 0;
+        }
+        p {
+            margin: 0;
+            color: #666;
+            font-size: 13px;
+            padding-bottom: 30px;
+        }
+        nav {
+            a {
+                padding: 0 10px;
+                font-size: 14px;
+                font-weight: bold;
+            }
+        }
     }
     .content {
         position: relative;
@@ -65,8 +84,8 @@ a {
                 margin-bottom: 10px;
             }
             .date {
-                color: #ccc;
-                font-size: 16px;
+                color: #e2e2e2;
+                font-size: 14px;
             }
             p {
                 color: #9c9c9c;
@@ -78,6 +97,8 @@ a {
         max-width: 700px;
         margin: 0 auto;
         text-align: center;
+        font-size: 11px;
+        color: #999;
         background-color: #fff;
     }
 }
