Modified config file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
             <i class="fa fa-user"></i>
             About
         </a>
-        <a href="#">
+        <a href="{{ }}">
             <i class="fa fa-folder-open"></i>
             Category
         </a>
