--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <p>
-        Copyright &copy; <a href="{{site.github_username}}">noname</a><br>
+        Copyright &copy; <a href="{{site.github_username}}">naduhy2</a><br>
         <span>Powered by Jekyll</span>
     </p>
 </footer>
