--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@ layout: "wrapper"
     <article>
         <h2>
             <a href="{{ post.url }}">{{ post.title }}</a>
+            <span>{{ category }}</span>
             <span class="date">{{ post.date | date: "%B %d, %Y" }}</span>
         </h2>
         <p>{{ post.excerpt }}</p>
