--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
             <i class="fa fa-home"></i>
             Home
         </a>
-        <a href="/about/index.html">
+        <a href="blog/about/index.html">
             <i class="fa fa-user"></i>
             About
         </a>
