--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
     <p>{{ site.description }}</p>
     <nav>
-        <a href="/">
+        <a href="/blog/">
             <i class="fa fa-home"></i>
             Home
         </a>
