--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,11 @@
     <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
     <p>{{ site.description }}</p>
     <nav>
-        <a href="/blog/">
+        <a href="{{ site.url }}">
             <i class="fa fa-home"></i>
             Home
         </a>
-        <a href="/blog/about/index.html">
+        <a href="/about/">
             <i class="fa fa-user"></i>
             About
         </a>
