--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
             <i class="fa fa-user"></i>
             About
         </a>
-        <a href="{{ }}">
+        <a href="/category/">
             <i class="fa fa-folder-open"></i>
-            Category
+            Categories
         </a>
     </nav>
 </header>
