--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,6 +87,7 @@ a {
             }
             p {
                 color: #9c9c9c;
+                font-size: 14px;
             }
         }
     }
