--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: "wrapper"
 {% for post in site.posts %}
     <article>
         <h2>
-            <a href="{{ post.url }}">{{ post.title }}</a>
+            <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
             <span>{{ category }}</span>
             <span class="date">{{ post.date | date: "%B %d, %Y" }}</span>
         </h2>
