--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,14 @@
 ---
 layout: "wrapper"
+comments: true
+# other options
 ---
 
 <h2>{{ page.title }}</h2>
 
 {{ content }}
-
+{% include comments.html %}
+<script id="dsq-count-scr" src="//naduhy2.disqus.com/count.js" async></script>
 <!-- <hr>
 {% for post in site.posts %}
     <li>
