--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,103 +1,8 @@
 ---
 
 ---
-html {
-    padding: 0;
-    margin: 0;
-    line-height: 1.5;
-}
-body {
-    // font-family: Nunito, sans-serif;
-    font-family: "Lato", "PingFang SC", "Microsoft YaHei", sans-serif;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: none;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-    &:hover {
-        text-decoration: none;
-        color: #ee3dc1;
-    }
-}
-
-.wrapper {
-    .coverimage {
-        position: relative;
-        overflow: hidden;
-        height: 300px;
-        max-height: 300px;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-color: #F9FAFB;
-        @media screen and (max-width: 1024px) and (min-width: 640px) {
-            height: 140px;
-        }
-        @media screen and (max-width: 639px) and (min-width: 320px) {
-            height: 80px;
-        }
-    }
-    header {
-        position: relative;
-        overflow: hidden;
-        max-width: 700px;
-        margin: 0 auto;
-        padding-bottom: 20px;
-        background-color: #fff;
-        text-align: center;
-        border-bottom: 1px solid #f5f5f5;
-        h1 {
-            margin: 0;
-            padding: 20px 0 0 0;
-        }
-        p {
-            margin: 0;
-            color: #666;
-            font-size: 13px;
-            padding-bottom: 30px;
-        }
-        nav {
-            a {
-                padding: 0 10px;
-                font-size: 14px;
-                font-weight: bold;
-            }
-        }
-    }
-    .content {
-        position: relative;
-        max-width: 700px;
-        margin: 0 auto;
-        padding: 0 16px;
-        article {
-            border-bottom: 1px solid #f2f2f0;
-            h2 {
-                font-size: 28px;
-                margin-bottom: 10px;
-            }
-            .date {
-                color: #e2e2e2;
-                font-size: 14px;
-            }
-            p {
-                color: #9c9c9c;
-                font-size: 14px;
-            }
-        }
-    }
-    footer {
-        position: relative;
-        max-width: 700px;
-        margin: 0 auto;
-        text-align: center;
-        font-size: 11px;
-        color: #999;
-        background-color: #fff;
-    }
-}
+@import "base";
+@import "coverimage";
+@import "header";
+@import "content";
+@import "footer";
