Modify post styles

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,14 @@ layout: "wrapper"
 
 {% for post in site.posts %}
     <article>
+        <div class="post_extra">
+            <a class="category" href="{{ page.categories }}"><i class="fa fa-folder-open"></i> {{ post.categories | first }}</a>
+            <span class="date">{{ post.date | date: "%B %d, %Y" }}</span>
+        </div>
         <h2>
             <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
             <span>{{ category }}</span>
         </h2>
-        <div class="post_extra">
-            <span class="category">{{ post.categories | first }}</span>
-            <span class="date">{{ post.date | date: "%B %d, %Y" }}</span>
-        </div>
         <p>{{ post.excerpt }}</p>
     </article>
 {% endfor %}
