--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -3,26 +3,55 @@
     max-width: 700px;
     margin: 0 auto;
     padding: 0 16px;
+    .post_extra {
+        display: block;
+        width: 100%;
+        padding-bottom: 10px;
+        font-size: 12px;
+        border-bottom: 1px solid #dedede;
+        .category {
+            position: relative;
+            padding-right: 18px;
+        }
+        .date {
+            color: #d0d0d0;
+            line-height: 20px;
+            float: right;
+        }
+    }
+
     article {
+        margin-top: 30px;
         border-bottom: 1px solid #f2f2f0;
         h2 {
             font-size: 28px;
             margin-bottom: 10px;
+            margin-top: 0px;
         }
         p {
             color: #9c9c9c;
             font-size: 14px;
         }
         .post_extra {
-            display: flex;
+            padding-bottom: 0;
+            border-bottom: none;
             .category {
-                padding-right: 10px;
-                color: #999;
+                position: relative;
+                padding-right: 18px;
+                color: #6ed3f3;
             }
             .date {
-                color: #e2e2e2;
-                font-size: 14px;
+                color: #d0d0d0;
+                line-height: 20px;
+                float: right;
             }
         }
+    }
+    p {
+        font-size: 16px;
+        line-height: 1.8;
+        letter-spacing: -0.4px;
+        text-align: justify;
+        color: #111;
     }
 }
