--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -6,4 +6,8 @@ footer {
     font-size: 11px;
     color: #999;
     background-color: #fff;
+    p {
+        padding-top: 40px;
+        padding-bottom: 20px;
+    }
 }
