Modify Pages structures

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer>
     <p>
-        <span><i class="fa fa-github"></i></span>
-        <span>Powered by Jekyll</span>
+        <span>Powered by Jekyll &amp; Github</span>
     </p>
 </footer>
 
