--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
             <i class="fa fa-user"></i>
             About
         </a>
-        <a href="category.html">
+        <a href="{{ page.categories | prepend: site.baseurl }}">
             <i class="fa fa-folder-open"></i>
-            Categories
+            Category
         </a>
     </nav>
 </header>
