--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -6,7 +6,8 @@ html {
 
 body {
     // font-family: Nunito, sans-serif;
-    font-family: "Lato", "PingFang SC", "Microsoft YaHei", sans-serif;
+    // font-family: "Lato", "PingFang SC", "Microsoft YaHei", sans-serif;
+    font-family: "Noto Sans DemiLight", "Malgun Gothic";
     margin: 0;
     padding: 0;
     position: relative;
