--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -50,8 +50,18 @@
     p {
         font-size: 16px;
         line-height: 1.8;
-        letter-spacing: -0.4px;
+        letter-spacing: 0.4px;
         text-align: justify;
         color: #111;
+    }
+    blockquote {
+        padding: 1px 0 0 12px;
+        border-color: #e8e8e8;
+        border-width: 0 0 0 4px;
+        border-style: solid;
+        color: #666;
+        p {
+            margin: 0;
+        }
     }
 }
