--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -19,7 +19,6 @@
             float: right;
         }
     }
-
     article {
         margin-top: 30px;
         border-bottom: 1px solid #f2f2f0;
@@ -38,7 +37,7 @@
             .category {
                 position: relative;
                 padding-right: 18px;
-                color: #6ed3f3;
+                color: #9c4aef;
             }
             .date {
                 color: #d0d0d0;
